--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="flex flex-col md:flex-row items-center md:space-x-8">
                 <div class="flex-shrink-0 mb-6 md:mb-0">
                     <!-- Replace the placeholder URL with your actual image URL -->
-                    <img src="https://placehold.co/200x200/cccccc/333333/png?text=Your+Photo" 
+                    <img src="https://drive.google.com/file/d/1xnzXlIGt5Cy2jMoGMoxZ2O8hWOu3OKtR/view?usp=sharing" 
                          alt="Keummin Ka's profile photo" 
                          class="rounded-full w-40 h-40 md:w-48 md:h-48 object-cover border-4 border-blue-200">
                 </div>
