--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
                 <div class="text-center md:text-left">
                     <h1 class="text-3xl md:text-4xl font-extrabold text-gray-900">안녕하세요!</h1>
                     <p class="mt-4 text-gray-700 leading-relaxed text-lg">
-                        저는 연세대학교 인공지능학과 석박사 통합 과정에 재학 중인 **Keummin Ka**입니다.
-                        주로 **자연어 처리(NLP)**, **멀티모달(Multi-modal)**, **비전-언어 모델(Vision-Language model)**,
-                        그리고 **개인화된 대규모 언어 모델(Personalized LLM)**에 대한 연구를 하고 있습니다.
-                        제 연구와 프로젝트, 경력에 대해 더 자세히 살펴보세요.
+                        I am Keummin Ka, a Master’s student in Artificial Intelligence at Yonsei University.
+                        My research primarily focuses on Natural Language Processing (NLP), Multimodal Learning, Vision-Language Models, and Personalized Large Language Models (LLMs).
+                        Feel free to explore my research, projects, and professional experience in more detail.
                     </p>
                     <p class="mt-2 text-sm text-gray-500">
                         Email: kummin0429@yonsei.ac.kr | Phone: +82) 010-6250-2726
