--- a/index.html
+++ b/index.html
@@ -38,13 +38,17 @@
         <section id="about" class="bg-white p-8 md:p-12 rounded-lg shadow-md mb-8 scroll-mt-24">
             <div class="flex flex-col md:flex-row items-center md:space-x-8">
                 <div class="flex-shrink-0 mb-6 md:mb-0">
-                    <!-- Replace the placeholder URL with your actual image URL -->
-                    <img src="https://drive.google.com/file/d/1xnzXlIGt5Cy2jMoGMoxZ2O8hWOu3OKtR/view?usp=sharing" 
+                    <!--
+                        To add your image, replace the "your-photo.jpg" with the name of your
+                        image file that you uploaded to the GitHub repository.
+                        Example: <img src="my_profile_photo.png" ...>
+                    -->
+                    <img src="profile.jpg" 
                          alt="Keummin Ka's profile photo" 
                          class="rounded-full w-40 h-40 md:w-48 md:h-48 object-cover border-4 border-blue-200">
                 </div>
                 <div class="text-center md:text-left">
-                    <h1 class="text-3xl md:text-4xl font-extrabold text-gray-900">안녕하세요!</h1>
+                    <h1 class="text-3xl md:text-4xl font-extrabold text-gray-900">Hello!</h1>
                     <p class="mt-4 text-gray-700 leading-relaxed text-lg">
                         I am Keummin Ka, a Master’s student in Artificial Intelligence at Yonsei University.
                         My research primarily focuses on Natural Language Processing (NLP), Multimodal Learning, Vision-Language Models, and Personalized Large Language Models (LLMs).
