--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         image file that you uploaded to the GitHub repository.
                         Example: <img src="my_profile_photo.png" ...>
                     -->
-                    <img src="profile.jpg" 
+                    <img src="profile.JPG" 
                          alt="Keummin Ka's profile photo" 
                          class="rounded-full w-40 h-40 md:w-48 md:h-48 object-cover border-4 border-blue-200">
                 </div>
