--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                     <p class="mt-2 text-sm text-gray-500">
                         Email: kummin0429@yonsei.ac.kr | Phone: +82) 010-6250-2726
                     </p>
+                    <!-- Link to the CV file -->
+                    <div class="mt-4">
+                        <a href="cv.docx" target="_blank" class="inline-block bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 transition duration-300">
+                            My CV
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
