--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     </p>
                     <!-- Link to the CV file -->
                     <div class="mt-4">
-                        <a href="cv.docx" target="_blank" class="inline-block bg-blue-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-blue-700 transition duration-300">
-                            My CV
+                        <a href="cv.docx" target="_blank" class="inline-block bg-blue-600 text-white font-semibold py-1.5 px-3 rounded-md hover:bg-blue-700 transition duration-300 text-sm">
+                            CV
                         </a>
                     </div>
                 </div>
