--- a/index.html
+++ b/index.html
@@ -55,14 +55,12 @@
                         Feel free to explore my research, projects, and professional experience in more detail.
                     </p>
                     <p class="mt-2 text-sm text-gray-500">
-                        Email: kummin0429@yonsei.ac.kr | Phone: +82) 010-6250-2726
+                        Email: <a href="mailto:kummin0429@yonsei.ac.kr" class="text-blue-500 hover:underline">kummin0429@yonsei.ac.kr</a> | Phone: +82) 010-6250-2726
                     </p>
-                    <!-- Link to the CV file -->
-                    <div class="mt-4">
-                        <a href="cv.docx" target="_blank" class="inline-block bg-blue-600 text-white font-semibold py-1.5 px-3 rounded-md hover:bg-blue-700 transition duration-300 text-sm">
-                            CV
-                        </a>
-                    </div>
+                    <!-- Link to the CV file as text -->
+                    <p class="mt-1 text-sm text-gray-500">
+                        <a href="cv.docx" target="_blank" class="text-blue-500 hover:underline">My CV</a>
+                    </p>
                 </div>
             </div>
         </section>
