--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
                     <p class="text-gray-600">Authors: Keummin Ka*, Junhyeong Park*, Jaehyun Jeon, Youngjae Yu</p>
                     <p><a href="https://arxiv.org/abs/2508.06220" target="_blank" class="text-blue-500 hover:underline">arXiv:2508.06220</a> Under Review by AAAI 2026</p>
                 </div>
+                <div>
+                    <h3 class="text-xl font-semibold">An Analysis of the Value Bias of Large Language Models based on the PERMA Theory</h3>
+                    <p class="text-gray-600">Authors: Chaewon Kim, Keummin Ka, Jinhong Jeong, Seungbeen Lee, Youngjae Yu</p>
+                    <p class="text-gray-600">Accepted to The 6th Korea Artificial Intelligence Conference</p>
+                </div>
             </div>
         </section>
 
