--- a/index.html
+++ b/index.html
@@ -86,32 +86,32 @@
             <div class="space-y-6">
                 <div>
                     <h3 class="text-xl font-semibold">Ever-Evolving Memory by Blending and Refining the Past</h3>
-                    <p class="text-gray-600">Authors: Seohyun Kim, Keummin Ka, Yohan Jo, Seung-won Hwang, Dongha Lee, Jinyoung Yeo</p>
+                    <p class="text-gray-600">Authors: Seohyun Kim, <strong>Keummin Ka</strong>, Yohan Jo, Seung-won Hwang, Dongha Lee, Jinyoung Yeo</p>
                     <p><a href="https://arxiv.org/abs/2403.04787" target="_blank" class="text-blue-500 hover:underline">arXiv:2403.04787</a></p>
                 </div>
                 <div>
                     <h3 class="text-xl font-semibold">Connecting the Dots from Data: LLM-driven Tree-search Career Cartographies as Your AI Career Explorer</h3>
-                    <p class="text-gray-600">Authors: Seungbeen Lee, Keummin Ka, Jinhong Jeong, Chaewon Kim, Seungju Han, Youngjae Yu</p>
+                    <p class="text-gray-600">Authors: Seungbeen Lee, <strong>Keummin Ka</strong>, Jinhong Jeong, Chaewon Kim, Seungju Han, Youngjae Yu</p>
                     <p class="text-gray-600">Preprint.</p>
                 </div>
                 <div>
                     <h3 class="text-xl font-semibold">Not All Who Wander Are Lost: Building Fantasy-World Commonsense with GANDALF</h3>
-                    <p class="text-gray-600">Authors: Keummin Ka*, Min Soo Kim*, Jungyang Park, Chanwoo Choi, Buru Chang, Youngjae Yu</p>
+                    <p class="text-gray-600">Authors: <strong>Keummin Ka*</strong>, Min Soo Kim*, Jungyang Park, Chanwoo Choi, Buru Chang, Youngjae Yu</p>
                     <p class="text-gray-600">Preprint. Under Review by AAAI 2026</p>
                 </div>
                 <div>
                     <h3 class="text-xl font-semibold">VAGUE: Visual Contexts Clarify Ambiguous Expressions</h3>
-                    <p class="text-gray-600">Authors: Heejeong Nam*, Jinwoo Ahn*, Keummin Ka, Jiwan Chung, Youngjae Yu</p>
+                    <p class="text-gray-600">Authors: Heejeong Nam*, Jinwoo Ahn*, <strong>Keummin Ka</strong>, Jiwan Chung, Youngjae Yu</p>
                     <p><a href="https://arxiv.org/abs/2411.14137" target="_blank" class="text-blue-500 hover:underline">arXiv:2411.14137</a> Accepted to ICCV 2025</p>
                 </div>
                 <div>
                     <h3 class="text-xl font-semibold">InfoCausalQA: A Benchmark for Causal Reasoning on Infographics</h3>
-                    <p class="text-gray-600">Authors: Keummin Ka*, Junhyeong Park*, Jaehyun Jeon, Youngjae Yu</p>
+                    <p class="text-gray-600">Authors: <strong>Keummin Ka*</strong>, Junhyeong Park*, Jaehyun Jeon, Youngjae Yu</p>
                     <p><a href="https://arxiv.org/abs/2508.06220" target="_blank" class="text-blue-500 hover:underline">arXiv:2508.06220</a> Under Review by AAAI 2026</p>
                 </div>
                 <div>
                     <h3 class="text-xl font-semibold">An Analysis of the Value Bias of Large Language Models based on the PERMA Theory</h3>
-                    <p class="text-gray-600">Authors: Chaewon Kim, Keummin Ka, Jinhong Jeong, Seungbeen Lee, Youngjae Yu</p>
+                    <p class="text-gray-600">Authors: Chaewon Kim, <strong>Keummin Ka</strong>, Jinhong Jeong, Seungbeen Lee, Youngjae Yu</p>
                     <p class="text-gray-600">Accepted to The 6th Korea Artificial Intelligence Conference</p>
                 </div>
             </div>
