--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
                 <div>
                     <h3 class="text-xl font-semibold">Work Experience</h3>
                     <ul class="list-disc list-inside space-y-2 text-gray-600">
+                        <li><strong>LLM Tutor Development Researcher at Lingora Tutoring</strong> (2024.02-2024.06)
+                            <ul class="list-circle list-inside ml-4 text-gray-500">
+                                <li>Participation in Building a Customized Korean LLM Tutor for Lingora Tutoring</li>
+                            </ul>
+                        </li>
                         <li><strong>2024 Samsung AI Expert course TA</strong> (2024.06.24-2024.06.28)
                             <ul class="list-circle list-inside ml-4 text-gray-500">
                                 <li>Conducted supplementary lessons on NLP and practiced code.</li>
