--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="space-y-4">
                 <div>
                     <h3 class="font-semibold text-lg">Yonsei University, Seoul, South Korea</h3>
-                    <p class="text-gray-600">M.S./Ph.D. Student, Department of Artificial Intelligence (Sep 2024 - Present)</p>
+                    <p class="text-gray-600">M.S. Student, Department of Artificial Intelligence (Sep 2024 - Present)</p>
                 </div>
                 <div>
                     <h3 class="font-semibold text-lg">Yonsei University, Seoul, South Korea</h3>
