--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </p>
                     <!-- Link to the CV file as text -->
                     <p class="mt-1 text-sm text-gray-500">
-                        <a href="cv1.docx" target="_blank" class="text-blue-500 hover:underline">My CV</a>
+                        <a href="cv.docx" target="_blank" class="text-blue-500 hover:underline">My CV</a>
                     </p>
                 </div>
             </div>
